--- a/assets/styles.css
+++ b/assets/styles.css
@@ -53,4 +53,20 @@ div h2 {
 
 #display-week {
     height: 300px;
+    border-style: solid;
+    display: flex;
+    justify-content: center;
+}
+
+.week-block {
+    border-style: solid;
+    margin-left: 2%;
+    margin-right: 2%;
+    margin-top: 1%;
+    margin-bottom: 1%;
+    width: 15%;
+}
+
+.week-block h3 {
+    text-align: center;
 }
